--- a/templates/contact/edit.html.twig
+++ b/templates/contact/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Contact{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Contact</h1>
 
     {{ include('contact/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('contact_index') }}">back to list</a>
 
     {{ include('contact/_delete_form.html.twig') }}
+</div>
 {% endblock %}
