--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Contact{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Contact</h1>
 
     {{ include('contact/_form.html.twig') }}
 
     <a href="{{ path('contact_index') }}">back to list</a>
+</div>
 {% endblock %}
