--- a/templates/contact/show.html.twig
+++ b/templates/contact/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Contact</h1>
 
     <table class="table">
@@ -39,4 +40,5 @@
     <a href="{{ path('contact_edit', {'id': contact.id}) }}">edit</a>
 
     {{ include('contact/_delete_form.html.twig') }}
+</div>
 {% endblock %}
